--- a/style.css
+++ b/style.css
@@ -6,15 +6,16 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    background-color: black;
     font-family: "Inter", sans-serif;
 }
+
 header{
-    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%)!important; 
+    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(27, 26, 26, 0.826) 100%);
 }
-section{
-    margin-top: 20px;
+main{
+    background: black;
 }
+
 .shape{
     color: rgb(255, 255, 255);
     font-size:80px;
@@ -34,7 +35,6 @@ section{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
     padding: 10px;
 
 }
@@ -65,13 +65,13 @@ section{
     font-size: 16px;
     font-weight: 400;
     color: #ffff;
-    transition:0.2s;
+    transition:0.3s;
     padding: 7px 13px;
 }
 .navbar ul li a:hover{
     background: rgb(230, 83, 60);
     border-radius: 15px;
-    transform: scale(0.2s);
+    transform: scale(0.3s);
     
 }
 .navbar ul li a.active{
@@ -197,7 +197,6 @@ section{
 /* main part start */
 .container{
     max-width: 1440px;
-    height: 442px;
     margin: 0 auto;
 }
 
@@ -207,6 +206,8 @@ section{
     font-size: 48px;
     font-weight: 900;
     text-align: center;
+    padding-top: 70px;
+
 }
 .text-contain p{
     color: rgba(255, 255, 255, 0.5);
@@ -241,6 +242,54 @@ section{
     text-align: center;
     margin-top: 6px;
     margin-bottom: 6px;
+}
+.run-part{
+    margin-top: 150px;
+}
+.run-container{
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 18px;
+    background: rgb(34, 34, 34);
+    padding: 20px 30px;
+}
+.run-text{
+    background: transparent;
+}
+.run-text h1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    background: transparent;
+    
+}
+.run-text p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    background: transparent;
+    margin-top: 14px;
+}
+.btn-peraimary-1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 42px;
+    padding: 16px 40px 16px 40px;
+    background: rgb(230, 83, 60);
+    border: none;
+    margin-top: 50px;
+}
+.img-card img{
+    width: 500px;
+    height: 347px;
+    border-radius: 18px;
+    background: transparent;
 }
 
 
@@ -324,6 +373,25 @@ section{
     }
     .img-iteam h4{
         margin-bottom: 6px;
+    }
+    .run-container{
+        width: 100%;
+        flex-direction: column;
+        background: rgb(34, 34, 34);
+    }
+    .run-text h1{
+        color: rgb(255, 255, 255);
+        font-family: Inter;
+        font-size: 35px;
+        font-weight: 600;
+    }
+    .img-card img{
+        width: 100%;
+        height:100%;
+    }
+    .btn-peraimary-1{
+        margin-top: 30px;
+        margin-bottom: 20px;
     }
 
 }
