--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ main{
     background: black;
 }
 
+.display-iteam{
+    display: block;
+}
+#spen-1{
+    display: none;
+}
+
 .shape{
     color: rgb(255, 255, 255);
     font-size:80px;
@@ -269,7 +276,8 @@ main{
 .run-text p{
     color: rgba(255, 255, 255, 0.5);
     font-family: Inter;
-    font-size: 14px;
+    font-size: 16px;
+    max-width: 600px;
     font-weight: 400;
     background: transparent;
     margin-top: 14px;
@@ -291,7 +299,126 @@ main{
     border-radius: 18px;
     background: transparent;
 }
+.training-part{
+    max-width: 1060px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.taxt-part h1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 40px;
+    font-weight: 900;
+}
+.taxt-part p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 14px;
+}
+.training-container-1{
+    display: flex;
+    margin-top: 58px;
+}
+.training-container-2{
+    display: flex;
+}
+.img-items-1{
+    height: 200px;
+    width: 26%;
+    background-image: url(images/exercise1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: rgba(6, 255, 209, 0.5);
+   
+}
+.img-items-1 h4{
+    margin-top: 60%;
+    color: #000;
+}
+.img-items-2 h4{
+    margin-top: 5%;
+    color: #fff;
+}
+.img-items-3 h4{
+    margin-top: 50%;
+    color: #fff;
+    margin-left: 20px;
+}
+.img-items-4 h4{
+    margin-left: 50%;
+    margin-top: 10%;
+    color: #fff;
 
+    
+}
+.img-items-5 h4{
+    margin-top: 50%;
+    color: #fff;
+    margin-left: 20px;
+}
+.img-items-6 h4{
+    margin-top: 40%;
+    color: #fff;
+    margin-left: 20px;
+}
+.img-items-2{
+    height: 200px;
+    width: 48%;
+    background: url(images/exercise2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: rgba(255, 0, 0, 0.3);
+    
+   
+}
+.img-items-3{
+    height: 200px;
+    width: 26%;
+    background: url(images/exercise3.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: rgba(0, 0, 0, 0.5);
+    
+   
+}
+.img-items-4{
+    height: 200px;
+    width: 40%;
+    background: url(images/exercise4.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: rgba(0, 0, 0, 0.5); 
+}
+.img-items-5{
+    height: 200px;
+    width: 25%;
+    background: url(images/exercise5.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: rgba(66, 255, 0, 0.3); 
+}
+.img-items-6{
+    height: 200px;
+    width: 35%;
+    background: url(images/exercise6.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: rgba(0, 71, 255, 0.3); 
+}
 
 /* responsive part for mobile */
 @media only screen and (max-width: 576px){
@@ -385,13 +512,55 @@ main{
         font-size: 35px;
         font-weight: 600;
     }
+    
     .img-card img{
         width: 100%;
         height:100%;
     }
     .btn-peraimary-1{
+        width:100%;
         margin-top: 30px;
         margin-bottom: 20px;
+    }
+    .training-part{
+        width: 100%;
+    }
+    .img-items-3{
+        display: none;
+    }
+    .img-items-6{
+        display: none;
+    }
+    .img-items-1{
+        width: 50%;
+    }
+    .img-items-2{
+        width: 50%;
+    }
+    .img-items-3{
+        width: 50%;
+    }
+    .img-items-4{
+        width: 50%;
+    }
+    .img-items-4 h4{
+        margin-left: 0;
+        margin-top: 80%;
+        color: #fff;
+    }
+    .img-items-5 h4{
+        margin-left: 0;
+        margin-top: 80%;
+        color: #fff;
+    }
+    .img-items-5{
+        width: 50%; 
+    }
+    .display-iteam{
+        display: none;
+    }
+    #spen-1{
+        display: block;
     }
 
 }
