--- a/style.css
+++ b/style.css
@@ -419,6 +419,147 @@ main{
     background-blend-mode: overlay;
     background-color: rgba(0, 71, 255, 0.3); 
 }
+/* BM calculator part start */
+.BM-container{
+    max-width: 1440px;
+    margin: 0 auto;
+    margin-top: 30px;
+    background: rgb(34, 34, 34);
+    display: flex;
+    padding-left: 10px;
+}
+.BMI{
+    margin-left: 350px;
+    padding: 20px;
+}
+.BMI h1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    text-align: justify;
+}
+.BMI p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: justify;
+}
+.BM-part-1{
+    width: 577px;
+    margin: 0 auto;
+    margin-top: 45px;
+    text-align: center;
+    text-align: justify;
+}
+.BM-part-1 h2{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 28px;
+    font-weight: 900;
+}
+table{
+    margin-top: 50px;
+    border-collapse: collapse;
+   
+}
+th,td{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 20px;
+}
+tr,th{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 500;
+}
+tr,td{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+}
+.BM-part-2{
+    width: 577px;
+    margin: 0 auto;
+    margin-top: 45px;
+
+}
+.BM-part-2 h2{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 28px;
+    font-weight: 900;
+    
+}
+.BM-part-2 p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 15px;
+}
+form{
+    margin-top: 38px;
+}
+input{
+    background: rgba(255, 255, 255, 0.1);
+    width: 250px;
+    height: 3rem;
+    padding: 10px;
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    margin: 10px;
+    
+}
+#inpout{
+    background: rgba(255, 255, 255, 0.1);
+    width: 250px;
+    height: 3rem;
+    padding: 10px;
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 8px;
+    border: none;
+    
+}
+#inpout-1{
+    background: rgba(255, 255, 255, 0.1);
+    width: 505px;
+    height: 3rem;
+    padding: 10px;
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    margin: 10px;
+}
+.btn{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
+    border-radius: 42px;
+    background: rgb(230, 83, 60);
+    border: none;
+    outline: none;
+    padding: 12px 30px;
+    margin-left: 15px;
+}
 
 /* responsive part for mobile */
 @media only screen and (max-width: 576px){
@@ -533,10 +674,10 @@ main{
         display: none;
     }
     .img-items-1{
-        width: 42%;
+        width: 39%;
     }
     .img-items-2{
-        width: 58%;
+        width: 61%;
     }
     .img-items-3{
         width: 50%;
@@ -563,5 +704,43 @@ main{
     #spen-1{
         display: block;
     }
-
+    /* bm-part */
+    .BM-container{
+        width: 100%;
+        flex-direction: column;
+        
+    }
+    .BMI{
+        margin: 0;
+    }
+    .BMI h1{
+        color: rgb(255, 255, 255);
+        font-family: Inter;
+        font-size: 32px;
+        font-weight: 900;
+        text-align: justify;
+        margin-top: 14px;
+    }
+    .BMI P{
+        color: rgba(255, 255, 255, 0.5);
+        font-family: Inter;
+        font-size: 14px;
+        font-weight: 400;
+    }
+    .BM-part-1{
+        width: 100%;
+    }
+    
+    .BM-part-2{
+        width: 100%;
+    }
+    input{
+        width: 125px;
+    }
+    #inpout{
+        width: 139px;
+    }
+    #inpout-1{
+        width: 283px;
+    }
 }
