--- a/style.css
+++ b/style.css
@@ -462,6 +462,7 @@ main{
 table{
     margin-top: 50px;
     border-collapse: collapse;
+    margin-bottom: 20px;
    
 }
 th,td{
@@ -560,6 +561,164 @@ input{
     padding: 12px 30px;
     margin-left: 15px;
 }
+/* our container part start */
+.our-part{
+    margin-top: 30px;
+
+}
+.our-container{
+    max-width: 1660px;
+    margin: 0 auto;
+}
+
+.our-contain h1{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    text-align: center;
+}
+.our-contain p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 14px;
+}
+.bg-container{
+    max-width: 1660px;
+    margin: 0 auto;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    margin-top: 58px;
+    padding: 20px 0;
+}
+.bg-part-1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    
+    
+}
+.bg-part-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+.img-container-1{
+    width: 326.67px;
+    border-radius: 18px;
+    background-image:url(images/trainer1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+}
+.img-container-1 h3{
+    margin-top: 70%;
+    color: white;
+    padding-left: 7px;
+    
+}
+.img-container-1 h5{
+    color: #fff;
+    padding-left: 7px;
+}
+.img-container-2{
+    width: 326.67px;
+    border-radius: 18px;
+    background-image:url(images/trainer2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+}
+.img-container-2 h3{
+    margin-top: 70%;
+    color: white;
+    padding-left: 7px;
+}
+.img-container-2 h5{
+    color: #fff;
+    padding-left: 7px;
+}
+.img-container-3{
+    width: 326.67px;
+    border-radius: 18px;
+    background-image:url(images/trainer3.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+}
+.img-container-3 h3{
+    margin-top: 70%;
+    color: white;
+    padding-left: 7px;
+}
+.img-container-3 h5{
+    color: #fff;
+    padding-left: 7px;
+}
+.img-container-4{
+    width: 326.67px;
+    border-radius: 18px;
+    background-image:url(images/trainer4.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+}
+.img-container-4 h3{
+    margin-top: 70%;
+    color: white;
+    padding-left: 7px;
+}
+.img-container-4 h5{
+    color: #fff;
+    padding-left: 7px;
+}
+.img-container-5{
+    width: 326.67px;
+    border-radius: 18px;
+    background-image:url(images/trainer5.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+}
+.img-container-5 h3{
+    color: white;
+    margin-top: 70%;
+    padding-left: 7px;
+}
+.img-container-5 h5{
+    color: #fff;
+    padding-left: 7px;
+}
+.img-container-6{
+    width: 326.67px;
+    border-radius: 18px;
+    background-image:url(images/trainer6.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+}
+.img-container-6 h3{
+    color: white;
+    margin-top: 70%;
+    padding-left: 7px;
+}
+.img-container-6 h5{
+    color: #fff;
+    padding-left: 7px;
+}
+
 
 /* responsive part for mobile */
 @media only screen and (max-width: 576px){
@@ -742,5 +901,17 @@ input{
     }
     #inpout-1{
         width: 283px;
+    }
+    .our-container{
+        width: 100%;
+    }
+    .bg-container{
+        width: 100%;
+    }
+    .bg-part-1,.bg-part-2{
+        flex-direction: column;
+    }
+    .img-container-1{
+        display: none;
     }
 }
