--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ main{
    
 }
 .img-items-1 h4{
-    margin-top: 60%;
+    margin-top: 50%;
     color: #000;
 }
 .img-items-2 h4{
@@ -780,7 +780,67 @@ input{
     color: #fff;
     padding-left: 7px;
 }
+/* footer part start */
+footer{
+    background: #000;
+    padding: 30px 0;
 
+}
+.footer-container{
+    max-width: 1440px;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 10% 0;
+
+}
+.footer-contain{
+    margin-top: 50px;
+    max-width: 1059px;
+    margin: 0 auto;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    padding-bottom: 30px;
+}
+.footer-contain{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+.footer-item-1 h1{
+    color: rgb(230, 83, 60);
+    font-family: Inter;
+    font-size: 50px;
+    font-weight: 800;
+}
+.footer-item-1 p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 14px;
+}
+.footer-item h4{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 700;
+}
+.footer-item h5{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 23px;
+    font-weight: 400;
+    margin: 15px 0;
+}
+.pera{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 20px;
+
+}
 
 /* responsive part for mobile */
 @media only screen and (max-width: 576px){
@@ -950,10 +1010,13 @@ input{
     }
     .BM-part-1{
         width: 100%;
+        
     }
     
     .BM-part-2{
         width: 100%;
+
+
     }
     input{
         width: 125px;
@@ -984,5 +1047,15 @@ input{
     }
     .row img{
         width: 100%;
+    }
+    .footer-container{
+        width: 100%;
+    }
+    .footer-contain{
+        width: 100%;
+        flex-direction: column;
+    }
+    .footer-item-1{
+        text-align: center;
     }
 }
